# CSCE-629-Semester-Project

./: CMakeLists.txt  README.md  adaptive_annealing.py  adaptive_surrogate.py  annealing_generator.py  annealing_surrogate.py  brute_force_generator.py  cppheight.cpp  final_matrix.txt  generator.py  generatorMatrix-Yuuzen_Shen-434000618-629-601-SP25-P1  hybrid_annealing.py  mHeight-Yuuzen_Shen-434000618-629-601-SP25-P1  manual_verify.py  matrix.md  matrix.txt  message.txt  note.md  process_matrices.py  random_generator.py  report.typ  seed_annealing_generator.py  surrogate.py  test.txt  test_adaptive.py  test_surrogate.py  verifier.py
docs/: verify.md
lp-verifier-cpp/: CMakeLists.txt  compute_m_height.cpp  manual_verify.cpp
submission/: codes-mHeight-Yuuzen_Shen-434000618-629-601-SP25-P1
submission2/: codes-mHeight-Yuuzen_Shen-434000618-629-601-SP25-P2  generatorMatrix-Yuuzen_Shen-434000618-629-601-SP25-P2  mHeight-Yuuzen_Shen-434000618-629-601-SP25-P2
